fixed the chart dropdown not overlapping grid issue

--- a/app/style/component/chart.module.scss
+++ b/app/style/component/chart.module.scss
@@ -7,7 +7,6 @@
 .chart {
     width: 100%;
     height: 100%;
-    position: relative;
     background-color: "#222";
-
+    z-index: 1;
 }
