--- a/app/style/component/panel.module.scss
+++ b/app/style/component/panel.module.scss
@@ -1,13 +1,15 @@
 .panel {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    height: 100%;
     align-items: center;
-    background-color: #1E1F24;
     color: #FFF;
-    padding: 10x;
     font-size: 1rem;
     position: relative;
-    z-index: 10;
+}
+
+.panel-item {
+    margin: 1.5rem;
 }
 
 .symbol-logo {
@@ -16,7 +18,6 @@
 .symbol-container {
     display: flex;
     align-items: center;
-    position: relative;
 }
 .symbol-name {
     font-weight: bold;
@@ -44,11 +45,13 @@
     position: absolute;
     top: 100%;
     left: 0;
+    z-index: 10;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    z-index: 100;
+    height: 500px;
     width: 350px;
+    background-color: #1E1F24;
 
 }
 
