--- a/app/style/page/trade.module.scss
+++ b/app/style/page/trade.module.scss
@@ -1,6 +1,4 @@
 .grid-item {
-    display: flex;
-    flex-direction: column;
     width: 100%;
     height: 100%;
     background-color: #1E1F24;
